--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+<h1>Index pagxxe</h1>
+<h1>Index pagxxe</h1>
   <app-root></app-root>
 </body>
 </html>
