--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-<h1>Index pagxxe</h1>
-<h1>Index pagxxe</h1>
-  <app-root></app-root>
+  <a href="../assets/index.html">Click Here to Assignment Two Home Page</a>
 </body>
 </html>
