--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -23,7 +23,7 @@
   <ul><a href="views/user/profile.html">              profile.html              </a></ul>
   <ul><a href="views/user/register.html">             register.html             </a></ul>
   <ul><a href="views/website/website-edit.html">      website-edit.html         </a></ul>
-  <ul><a href="views/website/website-list.html">      website-list.html         </a></ul>
+  <ul><a href="views/website/website-list.çhtml">      website-list.html         </a></ul>
   <ul><a href="views/website/website-new.html">       website-new.html          </a></ul>
   <ul><a href="views/widget/widget-chooser.html">      widget-choose.html        </a></ul>
   <ul><a href="views/widget/widget-heading.html">     widget-heading.html       </a></ul>
