--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,44 @@
-<!doctype html>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <!-- Meta tags for making website for mobile-->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <!-- <meta name="viewport" content="initial-scale=1.25, user-scalable=no"> -->
+
+  <meta charset="UTF-8">
+  <title>Index</title>
+  <base href="/">
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+        crossorigin="anonymous">
+  <link rel="stylesheet" href="./assets/css/styles.css">
+  <script src="http://code.jquery.com/jquery-3.3.1.js"
+          integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+          crossorigin="anonymous">
+  </script>
+
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
+  <!-- STYLE sheet comes after all the libraries are loaded. Document style-->
+</head>
+
+<body>
+<app-root></app-root>
+</body>
+
+</html>
+
+<!-- <!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>HelloWorld</title>
+  <title>MyApp</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <a href="../assets/index.html">Click Here to Assignment Two Home Page</a>
+  <app-root></app-root>
 </body>
-</html>
-
-<html>
-
-</html>
+</html> -->
